[package]
name = "modular-agent-sqlx"
version = "0.2.0"
description = "SQLx Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
futures-util = "0.3"
im = "15.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["any", "sqlite", "mysql", "postgres", "runtime-tokio"] }

modular-agent-core = "0.22.0"

[features]
default = ["image"]
image = []

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
